<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/EmlakMetinStili">

    <!--Başlık-->
    <include layout="@layout/ust_kisim" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <!--Haberler-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblAnaSayfaHaberler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="-1dp"
                        android:background="@drawable/kenarlik_gri"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/baslik_haberler"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <ImageView
                            android:id="@+id/imgAnaSayfaHaberler"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_weight="1"
                            android:background="@drawable/kenarlik_gri"
                            android:scaleType="fitXY" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="-1dp"
                            android:layout_weight="3"
                            android:background="@drawable/kenarlik_gri"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <ScrollView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <com.sinasalik.thrashead.emlak.Emlak.EmlakKontroller.EmlakListView
                                    android:id="@+id/emlakAnaSayfaHaberListView"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">
                                </com.sinasalik.thrashead.emlak.Emlak.EmlakKontroller.EmlakListView>

                            </ScrollView>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <!--Hakkımızda-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblAnaSayfaHakkimizda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="-1dp"
                        android:background="@drawable/kenarlik_gri"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/baslik_hakkimizda"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <ImageView
                            android:id="@+id/imgAnaSayfaHakkimizda"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_weight="1"
                            android:background="@drawable/kenarlik_gri"
                            android:scaleType="fitXY" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="-1dp"
                            android:layout_weight="3"
                            android:background="@drawable/kenarlik_gri"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <ScrollView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <WebView
                                    android:id="@+id/wvAnaSayfaHakkimizda"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent" />
                            </ScrollView>
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <!--Günün İlanı-->
                <com.sinasalik.thrashead.emlak.Emlak.EmlakKontroller.IlanLayout
                    android:id="@+id/ilytGunun"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:gravity="top|center_horizontal"
                    android:orientation="vertical"
                    app:ilanAdet="1"
                    app:ilanBaslik="@string/baslik_gununilani"
                    app:ilanBaslikEkle="true"
                    app:ilanTip="Gunun" />

                <!--Rasgele İlan-->
                <com.sinasalik.thrashead.emlak.Emlak.EmlakKontroller.IlanLayout
                    android:id="@+id/ilytRasgele"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2.5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:ilanAdet="1"
                    app:ilanBaslik="@string/baslik_rasgeleilan"
                    app:ilanBaslikEkle="true"
                    app:ilanTip="Rasgele" />

            </LinearLayout>

            <!--Vitrin-->
            <com.sinasalik.thrashead.emlak.Emlak.EmlakKontroller.IlanLayout
                android:id="@+id/ilytVitrin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:orientation="vertical"
                app:ilanAdet="2"
                app:ilanBaslik="@string/baslik_vitrin"
                app:ilanBaslikEkle="true"
                app:ilanGoruntuTip="Liste"
                app:ilanTip="Vitrin" />

            <!--Yeni İlanlar-->
            <com.sinasalik.thrashead.emlak.Emlak.EmlakKontroller.IlanLayout
                android:id="@+id/ilytYeni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:orientation="vertical"
                app:ilanAdet="2"
                app:ilanBaslik="@string/baslik_yeniilan"
                app:ilanBaslikEkle="true"
                app:ilanGoruntuTip="Liste"
                app:ilanTip="Yeni" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>